--- a/src/app/components/z/z.component.html
+++ b/src/app/components/z/z.component.html
@@ -1,11 +1,30 @@
 
-    
-
-<footer class="pie">
-  
-    <p>&copy; 2024 Colegio Manuel J-Calle</p> 
-    
-                 
-    
-    </footer>
-
+     <footer class="bg-blue-900 text-white py-8">
+        <div class="container mx-auto flex justify-between">
+          <div>
+            <p class="text-xl font-bold">"Unidad Educativa del Milenio
+                Manuel J. Calle"</p>
+            <p>Dirección: Francisco Calderon 4-54 y Mariano Cueva, Cuenca</p>
+            <p>Teléfono:(07) 420-5487</p>
+            <p>Email: unidadmanueljcalle.edu.ec</p>
+          </div>
+          <div>
+            <p class="text-xl font-bold">Síguenos en Redes Sociales</p>
+            <div class="flex space-x-7 justify-center">
+                <a href="https://www.facebook.com/tu-pagina" target="_blank" rel="noopener noreferrer" class="hover:text-gray-300">
+                    <img src="\assets\fb_icon_325x325.png" alt="Facebook" class="w-10 h-10">
+                  </a>
+                  
+                  <a href="https://twitter.com/tu_usuario" target="_blank" rel="noopener noreferrer" class="hover:text-gray-300">
+                    <img src="\assets\Logo_of_Twitter.svg.webp" alt="Twitter" class="w-10 h-10">
+                  </a>
+                  
+                  <a href="https://www.instagram.com/tu_usuario" target="_blank" rel="noopener noreferrer" class="hover:text-gray-300">
+                    <img src="\assets\Instagram_logo_2022.svg.webp" alt="Instagram" class="w-10 h-10">
+                  </a>
+                  
+            </div>
+          </div>
+        </div>
+      </footer>
+      
